@@ -139,6 +139,7 @@
 * Bin Update: Add Unionpay bin [yunnydang] #5079
 * MerchantWarrior: Adding support for 3DS Global fields [Heavyblade] #5072
 * FatZebra: Adding third-party 3DS params [Heavyblade] #5066
+* SumUp: Remove Void method [sinourain] #5060
 
 == Version 1.135.0 (August 24, 2023)
 * PaymentExpress: Correct endpoints [steveh] #4827
